--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -83,7 +83,7 @@
         <div class="type_msg" id="input-user" style="display: none;">
             <div class="input_msg_write">
                 <div id="user-input" contenteditable="true" class="edit user-input write_msg form-submit-class" data-text="Type here..."></div>
-                <button id="submitInputButton" class="msg_send_btn" onclick="submitInput1();" disabled>
+                <button id="submitInputButton" class="msg_send_btn" onclick="bot_api_submitInput();" disabled>
                     <i class="fa fa-send-o sendTelegram" style="color: #fff;"></i>
                 </button>
             </div>
