--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -91,7 +91,7 @@
         <div class="ModalPopUp">
             <div class="modal hide" id="myModal" data-keyboard="false" data-backdrop="static">
                 <div class="modal-dialog-centered">
-                    <div class="modal-content modalNewBody" onclick="clickOnModalSection(event)">
+                    <div class="modal-content1 modalNewBody" onclick="clickOnModalSection(event)">
                         <div class="modal-body ">
                             <div class="popUpContent">
                                 <!-- <h5>Get Started ?</h5> -->
