status API changes

--- a/static/css/chatBot_darkmode.css
+++ b/static/css/chatBot_darkmode.css
@@ -679,7 +679,7 @@ div#wave .dot:nth-child(3) {
   bottom: 0px;
   /* left: 0;  */
   /* padding-left: 0; */
-  background-color: #ffffff;
+  background-color: #2e2339;
   width: 100%;
   /* overflow: hidden; */
   /* overflow-x: scroll;
