--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -42,7 +42,7 @@
     <div class="Container-fluid">
         <div id="session_id" style="display: none;">{{session_id}}</div>
         <div id="user_id" style="display: None;">{{user_id}}</div>
-        <div class="bot_profile" style="background-color: #FFFFFF,#3b2a50;position: fixed; width: 100%; height: 60px; padding: 7px; border-bottom-width:2px; border-bottom-color:#F1F3F9; border-bottom-style: solid;">
+        <div class="bot_profile" style="background-color: #FFFFFF;position: fixed; width: 100%; height: 60px; padding: 7px; border-bottom-width:2px; border-bottom-color:#F1F3F9; border-bottom-style: solid;">
             <button type="button" class="btn btn-primary setting_btn" data-toggle="modal" data-target="#exampleModal" onclick="myFunction();">
                 <div class="settings"><div class="setting1"><img class="setting"src="{% static 'images/settings.jpg' %}"style="height: 20px; width: 19.45px; float: left;"></div></div>
             </button>
