--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -116,6 +116,8 @@
               </button>
             </div>
             <div class="modal-body">
+                Status
+                <div id="status" style="color: red;float: right;"></div><br><br>
                 Dark mode
                 <label class="toggle-label toggler" id="toggle">
                     <input id="rdb1" type="checkbox" name="toggler" checked="true" />
@@ -123,7 +125,6 @@
                         <span class="toggle"></span>
                     </span>
                 </label>
-                <div id="status" style="color: rgb(0, 255, 0);"></div><br><br>
             </div>
           </div>
         </div>
