--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -116,8 +116,8 @@
               </button>
             </div>
             <div class="modal-body">
-                Status
-                <div id="status" style="color: red;float: right;"></div><br><br>
+                Status<br><br>
+                <div id="status" style="color: rgb(7, 86, 0);"></div><br><br>
                 Dark mode
                 <label class="toggle-label toggler" id="toggle">
                     <input id="rdb1" type="checkbox" name="toggler" checked="true" />
