--- a/static/css/chatBot_darkmode.css
+++ b/static/css/chatBot_darkmode.css
@@ -7,6 +7,7 @@ body {
   background-color: #2e2339;
   /* overflow: hidden; */
 }
+
 .chatUi{
   /* height: 858px; */
   padding: 58px 28px 71px 28px;
@@ -309,6 +310,7 @@ div.edit {
   line-height: 27px;
   color: #121f33;
 }
+
 .modal-body {
   cursor: pointer;
 }
@@ -451,6 +453,7 @@ div.edit {
   padding-bottom: 36px;
 }
 .received_msg {
+  margin-top: 54px;
   display: inline-block;
   padding: 22px 10px 0px 10px;
   vertical-align: top;
@@ -625,6 +628,16 @@ div#wave {
   padding: 22px;
   background-color: transparent;
   border-color: transparent;
+}
+.top_header{
+  background-color: #2e2339; 
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  padding: 7px;
+  border-bottom-width: 1px;
+  border-bottom-color: #F1F3F9;
+  border-bottom-style: solid;
 }
 .modal-content{
   width: 80%;
