--- a/static/css/chatBot_lightmode.css
+++ b/static/css/chatBot_lightmode.css
@@ -7,6 +7,7 @@ body {
   background-color: #FFFFFF;
   /* overflow: hidden; */
 }
+
 .chatUi{
   /* height: 858px; */
   padding: 58px 28px 71px 28px;
@@ -448,7 +449,7 @@ div.edit {
   padding-bottom: 36px;
 }
 .received_msg {
-  /* margin-top: 54px; */
+  margin-top: 54px;
   display: inline-block;
   padding: 22px 10px 0px 10px;
   vertical-align: top;
@@ -626,6 +627,16 @@ div#wave {
   padding: 22px;
   background-color: transparent;
   border-color: transparent;
+}
+.top_header{
+  background-color: #FFFFFF; 
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  padding: 7px;
+  border-bottom-width: 1px;
+  border-bottom-color: #F1F3F9;
+  border-bottom-style: solid;
 }
 .modal-content{
   width: 80%;
