--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'lib/css/playfairDisplay.css' %}">
     <link rel="stylesheet" href="{% static 'lib/css/montserrat.css' %}">
     <link rel="stylesheet" href="{% static 'lib/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/chatBot_darkmode.css' %}" />
     <link rel="stylesheet" href="{% static 'css/chatBot_lightmode.css' %}" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -42,7 +43,7 @@
     <div class="Container-fluid">
         <div id="session_id" style="display: none;">{{session_id}}</div>
         <div id="user_id" style="display: None;">{{user_id}}</div>
-        <div class="bot_profile" style="background-color: #FFFFFF;position: fixed; width: 100%; height: 60px; padding: 7px; border-bottom-width:2px; border-bottom-color:#F1F3F9; border-bottom-style: solid;">
+        <div class="bot_profile top_header">
             <button type="button" class="btn btn-primary setting_btn" data-toggle="modal" data-target="#exampleModal" onclick="myFunction();">
                 <div class="settings"><div class="setting1"><img class="setting"src="{% static 'images/settings.jpg' %}"style="height: 20px; width: 19.45px; float: left;"></div></div>
             </button>
@@ -83,7 +84,7 @@
         <div class="type_msg" id="input-user" style="display: none;">
             <div class="input_msg_write">
                 <div id="user-input" contenteditable="true" class="edit user-input write_msg form-submit-class" data-text="Type here..."></div>
-                <button id="submitInputButton" class="msg_send_btn" onclick="submitInput1();" disabled>
+                <button id="submitInputButton" class="msg_send_btn" onclick="bot_api_submitInput()" disabled>
                     <i class="fa fa-send-o sendTelegram" style="color: #fff;"></i>
                 </button>
             </div>
@@ -159,7 +160,7 @@
         : 
         darkstylesheet.appendTo("head");
 
-        $("#" + toShow).toggle(1);
+        // $("#" + toShow).toggle(1);
         });   
 
     </script>
