front end issues fix

--- a/static/css/chatBot_darkmode.css
+++ b/static/css/chatBot_darkmode.css
@@ -294,7 +294,7 @@ div.edit {
   width: 96%;
   margin-left: 2%;
   color: #FFFFFF;
-  background-color: #3B2B50;
+  /* background-color: #3B2B50; */
   margin-bottom: 5px;
   border-radius: 10px;
 }
