--- a/static/css/chatBot_lightmode.css
+++ b/static/css/chatBot_lightmode.css
@@ -635,7 +635,7 @@ div#wave {
   height: 60px;
   padding: 7px;
   border-bottom-width: 1px;
-  border-bottom-color: #F1F3F9;
+  border-bottom-color: #0b0b0b;
   border-bottom-style: solid;
 }
 .modal-content{
