--- a/templates/chatBot_lightmode.html
+++ b/templates/chatBot_lightmode.html
@@ -118,7 +118,7 @@
             </div>
             <div class="modal-body">
                 Status<br><br>
-                <div id="status" style="color: rgb(7, 86, 0);"></div><br><br>
+                <div id="status"></div><br><br>
                 Dark mode
                 <label class="toggle-label toggler" id="toggle">
                     <input id="rdb1" type="checkbox" name="toggler" checked="true" />
