--- a/static/css/chatBot_darkmode.css
+++ b/static/css/chatBot_darkmode.css
@@ -7,7 +7,9 @@ body {
   background-color: #2e2339;
   /* overflow: hidden; */
 }
-
+#status{
+  color: #18c100;
+}
 .chatUi{
   /* height: 858px; */
   padding: 58px 28px 71px 28px;
